# rust-solid-principles

./: README.md
code/: Cargo.toml
code/src/: main.rs
code/src/computational/: closest_values.rs  computations.rs  factory.rs  least_to_greatest.rs  maximum_value.rs  mod.rs
code/src/data_sources/: Data_Source.rs  Factory.rs  InMemory_Data_Source.rs  MySql.rs  data_source.rs  factory.rs  in_memory_data_source.rs  mod.rs  mysql.rs
code/src/engine/: closest_values.rs  computations.rs  configuration.rs  factory.rs  least_to_greatest.rs  logger.rs  maximum_value.rs  mod.rs
