[package]
name = "rust-solid"
version = "0.1.0"
authors = ["matt raffel <matt.raffel@evernym.com>"]
description = "A project that represents a functional implemention of SOLID programming practices in RUST. This project is the end result of the class on SOLID rust"

[dependencies]
ansi_term = "0.11.0"
env_logger = "0.5.10"
lazy_static = "0.2"
libc = "0.2.21"
log = "0.4.1"
preferences = "1.1.0"